crates/wasm-workers/src/workflow/snapshots/advance_paused_workflow_until_finished@advance_paused_workflow_trimmed_to_1_replay_4.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: redact_replay(&replay)
---
{
  "captured_writes": [
    {
      "AppendFinished": {
        "execution_id": "E_00000000000000000000000001",
        "version": 5,
        "current_time": "1970-01-01T00:00:00.800Z",
        "retval": {
          "ok": {
            "type": "u64",
            "value": 55
          }
        },
        "parent": null
      }
    }
  ]
}
