crates/wasm-workers/src/workflow/snapshots/advance_paused_workflow_until_finished@fibo_workflow_each_stage_replay_1_advance_1.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: "json!({\n    \"version\": advance.version.0, \"outcome\": format!(\"{:?}\", advance.outcome),\n    \"trim_to\": trim_to, \"requested_captured_writes_len\":\n    requested.captured_writes.len(), \"replayed_captured_writes_len\":\n    replay.captured_writes.len(),\n})"
---
{
  "version": 5,
  "outcome": "Applied",
  "trim_to": null,
  "requested_captured_writes_len": 3,
  "replayed_captured_writes_len": 3
}
